--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "captcha-generator-alphanumeric",
+	"name": "@SnowFlake/captcha-generator",
 	"version": "1.10.0",
-	"description": "An NPM package to generate alphanumeric captcha images",
+	"description": "An NPM package to generate custom captcha images",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -33,11 +33,6 @@
 	"engines": {
 		"node": ">=12.0.0"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/pulsejet/captcha-generator-alphanumeric.git"
-	},
-	"homepage": "https://github.com/pulsejet/captcha-generator-alphanumeric",
 	"keywords": [
 		"captcha",
 		"generator",
